<resources>
    <string name="app_name">Ezanî Saat</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add_location">AddLocationActivity</string>
    <string name="konumlar">Konumlar</string>
    <string name="ulke_sec">Ülke Seçin</string>
    <string name="base_url">https://ezanvakti.herokuapp.com</string>
    <string name="yukleniyor">Yükleniyor…</string>
    <string name="error">Hata</string>
    <string name="err_msg">Güncel namaz vakitleri alınırken bir hata oluştu!</string>
    <string name="net_err_msg">İnternet bağlantınızı kontrol edip tekrar deneyin!</string>
    <string name="tamam">Tamam</string>
    <string name="kapat">Kapat</string>
    <string name="yinele">Tekrar Dene</string>
    <string name="bilgi">Bilgi</string>
    <string name="success">Başarılı!</string>
    <string name="email_girin">E-mail</string>
    <string name="search">Ara…</string>
    <string name="imsak">İmsak</string>
    <string name="gunes">Güneş</string>
    <string name="ogle">Öğle</string>
    <string name="ikindi">İkindi</string>
    <string name="aksam">Akşam</string>
    <string name="yatsi">Yatsı</string>
    <string name="vaktin_cikmasina">VAKTİN ÇIKMASINA</string>
    <string name="ezani_saat">EZANÎ SAAT</string>
    <string name="umumi">Umûmî</string>
    <string name="ezani">Ezanî</string>
    <string name="saat_sifir">00:00</string>
    <string name="sehir_secin">Şehir Seçin</string>
    <string name="ilce_secin">İlçe Seçin</string>
    <string name="sure_to_remove">Silmek istediğinize emin misiniz?</string>
    <string name="add_loc">Yeni Yer Ekle</string>
    <string name="info">Uygulama Hakkında</string>
    <string name="set_active">Geçerli Konum Yap</string>
    <string name="undo">Geri Al</string>
    <string name="deleted_suc">Başarıyla Silindi</string>
    <string name="updating_times" formatted="false">%s konumu için vakitler güncelleniyor.</string>
    <string name="updating_times_all" formatted="false">Tüm konumlar için vakitler güncelleniyor.</string>
    <string name="ezan_saat_hakkinda">Ezanî Saat Hakkında</string>
    <string name="ezan_saat_inf">EZÂNÎ SAAT NEDİR?
\nAnadolumuz’un birçok yerlerinde, az da olsa, bu saati kullananlar hâlâ mevcuttur. Üstelik bu saat bize bir ecdad yâdigârıdır. Ecdâdımıza saygı ve sevgimizin bir nişânesi olarak, ezânî saati bir köşeye terketmeye râzı olamıyoruz. Sadece İstanbul için de olsa, bu saati muhâfaza ediyoruz.

Ancak İstanbul dışındaki vilayet ve kazalarımızın ezânî (Alaturka) saate göre namaz vakitlerini tesbit etmek de, zor bir şey değildir. Hangi mahallin ezânî saatini tesbit etmek istiyorsak, o mahallin vasatî akşam vaktinden 12 saat çıkarıldıktan sonra, kalan saat o mahallin bütün vasâtî vakitlerinden teker teker çıkarılırsa, o mahalle ait ezânî saatler bulunmuş olur. Mesalâ: Ankara’da 1 Ocak günü akşam namazı vakti 16.40’dır. Bundan 12 saat çıkardığımızda 4.40 kalacaktır. Ankara’da 1 Ocak günü İmsak vakti ise 5.15’dir. 5.15’den 4.40’ı çıkardığımız zaman 0.35 kalacaktır ki, bu, Ankara’nın 1 Ocak günü için ezânî imsak vaktidir. 1 Ocak’ın hangi vasatî vaktinden 4.40 saat çıkarılırsa, o vakte ait ezânî saat bulunacaktır.

Ezânî saate göre; akşam ezanı daima 12.00’de okunur. Bugün hâlâ alaturka saat kullananlar, vasâtî saate göre (takvimimizde gösterilen vakitler) akşam namazı vakti geldiğinde saatlerini mutlaka 12.00’ye getirmelidirler. En azından 2-3 günde bir bu ayarlamayı yapmalıdırlar.\nKaynak: Fazilet takvimi
\n
Vasatî ve Ezânî Sâat\n
Vasatî, Ezânî ve Müşterek Sâat:\n
Eskidenberi kullanılagelen Ezânî sâat makinesinin ayârı, her akşam, vasatî sâate göre hesâb edilen şer’î gurûb vaktinde 12 yapılır. Hergün, gurûb vakti gerilerken ileri, ilerlerken geri alınır. Vasatî bir ezânî gün uzunluğu ve Ta’dîl-i zemân yokdur. 1193 [m. 1779] senesinde Erzurûmda hâzırlanmış olan (Mi’yâr-ı evkat) takvîminde diyor ki, (Gölgenin en kısa olduğu hakîkî zevâl vaktinde, ezânî sâat makinesi, takvîmde yazılı zuhr vaktinden, temkîn zemânı geri alınır). Ezânî sâat makinesinin ayârını tashîh için, vasatî sâat herhangi bir nemâz vaktine gelince, ezânî sâat de, bu nemâzın, takvîmde yazılı vaktine getirilir. Vasatî ve ezânî sâatleri ayârlamak için, bir noktadan geçen (Nısf-ün-nehâr) ve kıble istikâmetlerinde iki hat çizilir. Bu noktaya bir çubuk dikilir. Çubuğun gölgesi, birinci hat üzerine gelince, sâat makinesi zevâl vaktine, ikinciye gelince, kıble sâatine getirilir. Gurûb vaktinin değişmesi bir dakîkadan az olduğu günlerde, ezânî sâatin ayârı değişdirilmez. İstanbulda altı ayda 186 dakîka ileri, altı ayda da 186 dakîka geri alınmakdadır. Bu sâat makineleri, zemân mikdârlarını, ezânî günün başladığı vakte göre ölçmekdedir. Nemâz vaktleri ise, gurûbî güne göre hesâb ediliyor. Ezânî gün, gurûbî günden (Temkin zemânı) sonra başladığı için, hesâb ile bulunan gurûbî vaktlerden Temkin çıkarılarak, nemâz vaktleri, ezânî vakte çevrilir. Gurûbî ve ezânî zemân hesâblarında, ta’dîl zemân hiç kullanılmaz. Ezânî Sâat Ayâr Cedveli
Londra şehrinin yedibuçuk derece şarkından ve garbından geçen iki tûl dâiresi arasında bulunan her yerde Londranın vasatî sâati müşterek olarak kullanılmakdadır. Buna (Batı Avrupa zemânı) denir. Şarkda yedibuçuk derecedeki tûl dâiresi ile yirmi iki buçuk dereceden geçen tûl dâiresi arasında kullanılan müşterek vasatî sâat, Londra sâatinden bir sâat ileridir. Buna (Orta Avrupa zemânı) denir. Yirmi iki buçuk dereceden geçen tûl dâiresi ile otuzyedi buçuk dereceden geçen tûl dâiresi arasındaki yerlerin hepsinde (Doğu Avrupa zemânı) kullanılır. Bu sâat, Londra sâatinden iki sâat ileridir. Dahâ şarkda olan (Yakın şark), (Orta şark) ve (Uzak şark) zemânları da, Londra zemânından üç, dört ve beş sâat ileridirler. Erd küresi üzerinde, birbirlerinden birer sâat farklı, 24 müşterek sâat mıntıkası vardır. Bir memleketde bulunan onbeşin katları kadar derecelerden geçen (Sâat başı tûl yarım dâireleri)nden biri üzerindeki yerlerin vasatî mahallî zemân makinelerinin müşterek olan ayârları, o memleketin (Müşterek sâat)i olarak kabûl edilmişdir. Türkiyenin müşterek sâati, İzmit, Kütahya, Bilecik ve Elmalı şehrlerinden geçen 30 dereceli sâat başı tûl yarım dâiresinin mahallî vasatî sâatinin ayârında olup, doğu Avrupa sâatidir. Ba’zı devletler, siyâsî veyâ iktisâdî sebeblerle, müşterek sâatlerin bu coğrâfî taksîmine uymamakdadır. Fransa, İspanya, Orta Avrupanın müşterek sâatini kullanmakdadır. Müşterek sâatlerinin ayârları birbirlerinden farklı olan memleketlerin zemân makinelerinde, herhangi bir vaktde, yalnız sâatleri gösteren rakamlar, birbirlerinden farklıdır. Şarkdaki memleketin müşterek sâatinin rakamı, garbdaki memleketin müşterek sâatinin rakamından dahâ [ileri] büyükdür.
Bir nemâzın, Türkiyenin herhangi bir şehrindeki mahallî vasatî sâate göre olan vakti ile, müşterek sâate göre olan vakti arasındaki fark, bu şehrin tûl derecesi ile 30 derece arasındaki farkın dört misli dakîkadır. Şehrin tûl derecesi 30 dan fazla ise, bu fark, mahallî sâatden çıkarılarak 30 dereceden az ise mahallî sâate eklenerek, bu nemâzın müşterek sâate göre vakti hâsıl olur. Meselâ, Mayısın birinci günü, bir nemâz vakti, Kars şehrinin mahallî vasatî sâatine göre 7 sa. 00 dakîka olsun. Karsın arz derecesi 41, tûl derecesi 43 dür. Bu tûl derecesi, 30 dan fazla olduğundan, Karsın mahallî sâati, müşterek sâatden ileridir. Bu nemâzın müşterek sâate göre Karsdaki vakti, 7 den 13x4=52 dakîka evvel olur ki, 6 yı sekiz dakîka geçedir.\n\t
Ezânî saat, güneşin batması yani akşam ezanı ile başlayan vakit için kullanılan bir tâbirdir. Gurub; yani güneşin batışı 12.00 olarak kabul edilir. Her gün güneş battığında ezânî saate göre saat 12.00’dir. Akşam ezanı bu saatle
(hep 12.00’de) okunduğundan “ezânî saat” ismini almıştır. Bugünkü kullandığımız “vasatî saat” Aralık 1925’te kabul edilip kullanılmaya başlandığında halkımız vasatî saate “alafranga”, ezânî saate de “alaturka” demiştir.
Osmanlı Devleti zamanında büyük cami muvakkithânelerinde vakitleri hesaplamakla vazifeli muvakkitler vardı. Akşam ezanı her gün bu muvakkitlerin hesaplarına göre okunur ve Müslümanlar da saatlerini 12.00’ye ayarlarlardı. Ilm-i hey’et derslerinde namaz vakitleri hesaplarını öğrenen imamlar, muvakkitlerin olmadığı ücra yerlerde vakitleri hesaplarlardı. Ezanlar bunların yaptığı hesaplara göre okunur ve saatler akşam ezanı ile 12.00’ye ayarlanırdı. Saat ayarı ezanla bildirilmiş olurdu. Bu bakımdan bu saate “mahalli saat” de denilmiştir.
Akşam namazının vakti hesaplanırken hey’et (astronomi) ilmindeki güneş merkezinin ufuktan kayboluşu olan zahiri gurub vakti kullanılmazdı. Her mahalin şer’i gurubu kullanılırdı. Şer’i gurub ise o mahallin en yüksek mevkiinde müşahede olunan zahirî gurub demektir. Meselâ İstanbul’da deniz sathına göre güneş zahiren gurub ettiği halde 250 metre yüksekliğindeki Çamlıca’da bulunan bir kimse güneşi henüz batmamış göreceğinden Istanbul için oraya itibar olunmak lâzım gelir. Şer’i gurub, zahiri gurubdan sonra vukua gelir. Ve her ikisi arasında geçen müddet -ki ona temkin denilir- zahiri gurub üzerine zam ve ilâve olunarak akşam vakti hesaplanmış olur.
Memleketimizde, az da olsa, bu saati kullananlar hâlâ mevcuttur. Üstelik bu saat bize bir ecdâd yadigârıdır. Ecdâdımıza saygı ve sevginin bir nişânesi olarak ezânî saati bir köşeye terk etmeye râzı olamayan Fazilet Takvimi’nde 2003 yılına kadar İstanbul için ezânî saatler gösterilmiştir. Kullananlar azalınca sadece İstanbul için de olsa ezânî saati internet sitesinde yayınlamaktadır.
Ezânî saat kullananlar, vasatî saate göre akşam namazı vakti geldiğinde saatlerini mutlaka 12.00’ye getirmelidirler. En azından 2-3 günde bir bu ayarlamayı yapmalıdırlar.
İstanbul dışındaki vilâyet ve kazalarımızın ezânî (Alaturka) saate göre namaz vakitlerini şöyle tesbit etmek mümkündür: Hangi mahallin ezânî saatini tesbit etmek istiyorsak, o mahallin vasatî akşam vaktinden 12 saat çıkarıldıktan sonra, kalan saat o mahallin bütün vasatî vakitlerinden teker teker çıkarılırsa, o mahalle ait ezânî saatler bulunmuş olur.\nMeselâ: Ankara’da 1 Ocak günü akşam namazı vakti 16.45’dir. Bundan 12 saat çıkardığımızda 4.45 kalacaktır. Ankara’da 1 Ocak günü öğle vakti ise 12.02’dir. 12.02’den 4.45’ı çıkardığımız zaman 7.17 kalacaktır ki, bu, Ankara’nın 1 Ocak günü için ezânî öğle vaktidir. 1 Ocak’ın vasatî vaktinden 4.45 saat çıkarılırsa, o vakte ait ezânî saat bulunacaktır. Sadece vasatî yatsı namazı vaktinden, vasatî aksam namazı vaktini çıkardığımız zaman ezani yatsı vakti bulunur.
</string>
    <string name="konum_yok">En az bir konum eklemelisiniz!</string>
    <string name="ayarlar">Ayarlar</string>
    <string name="bildirim_ayarlari">Bildirim Ayarları</string>
    <string name="vakitlerden_once_uyarilar">Vakitlerden Önce Uyarılar</string>
    <string name="imsaktan_once">İmsaktan Önce</string>
    <string name="gun_dog_once">Gün Doğumundan Önce</string>
    <string name="ogleden_once">Öğleden Önce</string>
    <string name="ikiniden_once">İkindiden Önce</string>
    <string name="ikindiKerahetOnce">Gün Batımı Kerahet Vaktinden Önce</string>
    <string name="aksamdan_once">Akşam Vaktinden Önce</string>
    <string name="yatsidan_once">Yatsıdan Önce</string>
    <string name="vakitlerde_uyarilar">Vakitlerde Uyarılar</string>
    <string name="gun_dogumu">Gün Doğumu</string>
    <string name="ikindi_kerahet">Gün Batımı Kerahet Vakti</string>
    <string name="gun_dogumu_kerahet_cikmasi">Gün Doğumu Kerahet Bitiş Vakti</string>
    <string name="ikindi_vakti">İkindi Vakti</string>
    <string name="aksamVakti">Akşam Vakti</string>
    <string name="imsak_vakti">İmsak Vakti</string>
    <string name="ogle_vakti">Öğle Vakti</string>
    <string name="yatsidan_vakti">Yatsı Vakti</string>
    <string name="vazgec">Vazgeç</string>
    <string name="iamin">Bildirim Almak İstiyorum</string>
    <string name="notify_info">Ezan vakitlerinde bildirim almak için bildirimlere izin verin</string>
    <string name="bildirimleri_ac">Bildirimleri Aç</string>
</resources>