<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/bildirim_ayarlari">

        <SwitchPreferenceCompat
            app:key="notifications"
            app:defaultValue="true"
            app:title="@string/bildirimleri_ac"/>

        <PreferenceCategory app:title="@string/vakitlerde_uyarilar">
            <SwitchPreferenceCompat
                app:key="imsak_vakti"
                app:title="@string/imsak_vakti"
                app:dependency="notifications" />
            <SwitchPreferenceCompat
                app:key="gun_dogumu"
                app:title="@string/gun_dogumu"
                app:dependency="notifications"/>
            <SwitchPreferenceCompat
                app:key="gun_dogumu_kerahet_cikmasi"
                app:dependency="notifications"
                app:title="@string/gun_dogumu_kerahet_cikmasi" />
            <SwitchPreferenceCompat
                app:key="ogle_vakti"
                app:title="@string/ogle_vakti"
                app:dependency="notifications"/>

            <SwitchPreferenceCompat
                app:key="ikindi_vakti"
                app:dependency="notifications"
                app:title="@string/ikindi_vakti" />
            <SwitchPreferenceCompat
                app:key="ikindi_kerahet_vakti"
                app:dependency="notifications"
                app:title="@string/ikindi_kerahet" />
            <SwitchPreferenceCompat
                app:key="aksam_vakti"
                app:title="@string/aksamVakti"
                app:dependency="notifications"/>

            <SwitchPreferenceCompat
                app:key="yatsi_vakti"
                app:title="@string/yatsidan_vakti"
                app:dependency="notifications"/>


        </PreferenceCategory>

        <PreferenceCategory app:title="@string/vakitlerden_once_uyarilar">
            <SwitchPreferenceCompat
                app:key="imsaktan_once"
                app:dependency="notifications"
                app:title="@string/imsaktan_once" />
            <SeekBarPreference
                app:dependency="imsaktan_once"
                app:key="time_to__imsak"
                app:defaultValue="15"
                app:min="5"
                app:seekBarIncrement="2"
                app:showSeekBarValue="true"
                app:title="Süre" />
            <SwitchPreferenceCompat
                app:key="gunesten_once"
                app:dependency="notifications"
                app:title="@string/gun_dog_once" />
            <SeekBarPreference
                app:dependency="gunesten_once"
                app:key="time_to__gunes"
                app:defaultValue="15"
                app:min="5"
                app:seekBarIncrement="2"
                app:showSeekBarValue="true"
                app:title="Süre" />
            <SwitchPreferenceCompat
                app:key="ogleden_once"
                app:dependency="notifications"
                app:title="@string/ogleden_once" />
            <SeekBarPreference
                app:dependency="ogleden_once"
                app:key="time_to__ogle"
                app:defaultValue="15"
                app:min="5"
                app:seekBarIncrement="2"
                app:showSeekBarValue="true"
                app:title="Süre"/>
            <SwitchPreferenceCompat
                app:key="ikindiden_once"
                app:dependency="notifications"
                app:title="@string/ikiniden_once" />
            <SeekBarPreference
                app:dependency="ikindiden_once"
                app:key="time_to__ikindi"
                app:defaultValue="15"
                app:min="5"
                app:seekBarIncrement="2"
                app:showSeekBarValue="true"
                app:title="Süre" />
            <SwitchPreferenceCompat
                app:key="ikindi_kerahet_once"
                app:dependency="notifications"
                app:title="@string/ikindiKerahetOnce" />
            <SeekBarPreference
                app:dependency="ikindi_kerahet_once"
                app:key="time_to__ikindi_kerahet"
                app:defaultValue="15"
                app:min="5"
                app:seekBarIncrement="2"
                app:showSeekBarValue="true"
                app:title="Süre" />
            <SwitchPreferenceCompat
                app:key="aksamdan_once"
                app:dependency="notifications"
                app:title="@string/aksamdan_once" />
            <SeekBarPreference
                app:key="time_to__aksam"
                app:defaultValue="15"
                app:min="5"
                app:seekBarIncrement="2"
                app:showSeekBarValue="true"
                app:title="Süre"
                app:dependency="aksamdan_once"
                />
            <SwitchPreferenceCompat
                app:key="yatsidan_once"
                app:dependency="notifications"
                app:title="@string/yatsidan_once" />

            <SeekBarPreference
                app:key="time_to__yatsi"
                app:defaultValue="15"
                app:min="5"
                app:seekBarIncrement="2"
                app:showSeekBarValue="true"
                app:title="Süre"
                app:dependency="yatsidan_once"
                />
            <!--
            <ListPreference
                app:dependency="yatsidan_once"
                app:entries="@array/sureler"
                app:entryValues="@array/sure_values"
                app:key="time_to__yatsi"
                app:title="@string/sure"
                app:defaultValue="15"
                app:useSimpleSummaryProvider="true" />-->

        </PreferenceCategory>
    </PreferenceCategory>
</PreferenceScreen>