<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.sahnisemanyazilim.ezanisaat.MainActivity">
    <item
        android:id="@+id/add_location"
        android:orderInCategory="100"
        android:title="@string/konumlar"
        app:showAsAction="never" />
    <item
        android:id="@+id/gecerli_konum"
        android:orderInCategory="100"
        android:title="@string/set_active"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_info"
        android:orderInCategory="100"
        android:title="@string/info"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/ayarlar"
        app:showAsAction="never" />
</menu>
