<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="8"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/text_day"
        android:layout_width="0px"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingLeft="5dp"
        android:layout_weight="1.44"
        android:paddingRight="2.5dp"
        android:layout_marginTop="2.5dp"
        android:layout_marginBottom="2.5dp"
        android:textColor="@color/white"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/text_imsak"
        android:layout_width="0px"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1.11"
        android:gravity="center"
        android:layout_marginTop="2.5dp"
        android:layout_marginBottom="2.5dp"
        android:text="@string/imsak"
        android:textColor="@color/white"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/text_gunes"
        android:layout_width="0px"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1.11"
        android:gravity="center"
        android:layout_marginTop="2.5dp"
        android:layout_marginBottom="2.5dp"
        android:text="@string/gunes"
        android:textColor="@color/white"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/text_ogle"
        android:layout_width="0px"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1.11"
        android:gravity="center"
        android:layout_marginTop="2.5dp"
        android:layout_marginBottom="2.5dp"
        android:text="@string/ogle"
        android:textColor="@color/white"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/text_ikindi"
        android:layout_width="0px"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1.11"
        android:gravity="center"
        android:layout_marginTop="2.5dp"
        android:layout_marginBottom="2.5dp"
        android:text="@string/ikindi"
        android:textColor="@color/white"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/text_aksam"
        android:layout_width="0px"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1.11"
        android:gravity="center"
        android:layout_marginTop="2.5dp"
        android:layout_marginBottom="2.5dp"
        android:text="@string/aksam"
        android:textColor="@color/white"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/text_yatsi"
        android:layout_width="0px"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1.11"
        android:gravity="center"
        android:layout_marginTop="2.5dp"
        android:layout_marginBottom="2.5dp"
        android:text="@string/yatsi"
        android:textColor="@color/white"
        android:textSize="12sp" />
</LinearLayout>